--- a/SoftwareDevelopmentCompany/SoftwareDevelopmentCompany/SoftwareDevelopmentCompany.csproj
+++ b/SoftwareDevelopmentCompany/SoftwareDevelopmentCompany/SoftwareDevelopmentCompany.csproj
@@ -58,6 +58,12 @@
     <Compile Include="ProjectListForm.Designer.cs">
       <DependentUpon>ProjectListForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProjectRoleStaffListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProjectRoleStaffListForm.Designer.cs">
+      <DependentUpon>ProjectRoleStaffListForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="StaffListForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,6 +83,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SoftwareDevelopmentCompanyDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="TechnicalDocumentationListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TechnicalDocumentationListForm.Designer.cs">
+      <DependentUpon>TechnicalDocumentationListForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TestListForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +100,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectListForm.resx">
       <DependentUpon>ProjectListForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProjectRoleStaffListForm.resx">
+      <DependentUpon>ProjectRoleStaffListForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="StaffListForm.resx">
       <DependentUpon>StaffListForm.cs</DependentUpon>
@@ -105,6 +120,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TechnicalDocumentationListForm.resx">
+      <DependentUpon>TechnicalDocumentationListForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TestListForm.resx">
       <DependentUpon>TestListForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -133,10 +151,14 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\IconTest.png" />
+    <None Include="Resources\IconSearch.png" />
+    <None Include="Resources\IconProjectRoleStaff.png" />
     <None Include="Resources\IconProject.png" />
     <None Include="Resources\IconStaff.png" />
     <None Include="Resources\IconApp.ico" />
     <None Include="Resources\IconClient.png" />
+    <None Include="Resources\IconDocumentation.png" />
     <Content Include="Resources\IconExit.png" />
     <None Include="Resources\IconInfo.png" />
   </ItemGroup>
